csv export for bills done

--- a/SubmitData/templates/SubmitData/home.html
+++ b/SubmitData/templates/SubmitData/home.html
@@ -13,6 +13,7 @@
   <h1>Your Entered Bills</h1>
     <h4><a class="nav-item nav-link" href="{% url 'is-paid' %}">View Your Unpaid Bills</a></h4>
     <h5><a class="nav-item nav-link" href="{% url 'view-summaries' %}">Create Monthly/Yearly Summaries Here</a></h5>
+    <h5><a class="nav-item nav-link" href="{% url 'download-bills' %}">Download your entered bills as CSV</a></h5>
 
 
     <p><strong>The date format must be in YYYY/MM/DD</strong></p>
